Set new filter map zoom and center

--- a/haitidata/templates/search/search_scripts.html
+++ b/haitidata/templates/search/search_scripts.html
@@ -17,7 +17,7 @@
 
 {% endif %}
 <script src="{{ STATIC_URL }}geonode/js/search/explore.js?v={{ VERSION }}"></script>
-<script src="{{ STATIC_URL }}geonode/js/search/search.js?v={{ VERSION }}"></script>
+<script src="{{ STATIC_URL }}js/search/search.js?v={{ VERSION }}"></script>
 <script src="{{ STATIC_URL }}geonode/js/search/cart.js"></script>
 <script type="text/javascript">
   $("body").attr('ng-controller', 'geonode_search_controller');
