Add translation support to custom home page

--- a/haitidata/templates/site_base.html
+++ b/haitidata/templates/site_base.html
@@ -105,7 +105,7 @@
               <li role="separator" class="divider"></li>
               <li><a href="{% url "help" %}">{% trans "Help" %}</li>
               <li role="separator" class="divider"></li>
-              <li><a href="/account/logout/">Logout</a></li>
+              <li><a href="/account/logout/">{% trans "Logout" %}</a></li>
             </ul>
           </li>
           {% else %}
