--- a/haitidata/templates/site_index.html
+++ b/haitidata/templates/site_index.html
@@ -16,30 +16,30 @@
 <section id="hazards">
 	<div class="container">
 		<div class="row">
-			<h2>Haiti Risk and Hazards</h2>
+			<h2>{% blocktrans %}Haiti Risk and Hazards{% endblocktrans %}</h2>
 			<div class="col-xs-6 col-md-2">
 				<a class="hazards" href="/search/?limit=100&offset=0&keywords__slug__in=flood"><span class="icon-Flood"></span></a>
-				<h4>River Flood</h4>
+				<h4>{% blocktrans %}River Flood{% endblocktrans %}</h4>
 			</div>
 			<div class="col-xs-6 col-md-2">
 				<a href="/search/?limit=100&offset=0&keywords__slug__in=cyclone"><span class="icon-Cyclone"></span></a>
-				<h4>Cyclone</h4>
+				<h4>{% blocktrans %}Cyclone{% endblocktrans %}</h4>
 			</div>
       <div class="col-xs-6 col-md-2">
 				<a href="/search/?limit=100&offset=0&keywords__slug__in=coastal-flood"><span class="icon-StormSurge"></span></a>
-				<h4>Coastal Flood</h4>
+				<h4>{% blocktrans %}Coastal Flood{% endblocktrans %}</h4>
 			</div>
       <div class="col-xs-6 col-md-2">
 				<a href="/search/?limit=100&offset=0&keywords__slug__in=earthquake"><span class="icon-Earthquake"></span></a>
-				<h4>Earthquake</h4>
+				<h4>{% blocktrans %}Earthquake{% endblocktrans %}</h4>
 			</div>
       <div class="col-xs-6 col-md-2">
 				<a href="/search/?limit=100&offset=0&keywords__slug__in=water-scarcity"><span class="icon-water_scarcity"></span></a>
-				<h4>Water Scarcity</h4>
+				<h4>{% blocktrans %}Water Scarcity{% endblocktrans %}</h4>
 			</div>
       <div class="col-xs-6 col-md-2">
 				<a href="/search/?limit=100&offset=0&keywords__slug__in=landslide"><span class="icon-Landslide"></span></a>
-				<h4>Landslide</h4>
+				<h4>{% blocktrans %}Landslide{% endblocktrans %}</h4>
 			</div>
 		</div>
 	</div>
@@ -48,19 +48,19 @@
   <div class="container">
     <div class="row">
       <div class="col-md-3">
-        <h1>Imagery</h1>
+        <h1>{% blocktrans %}Imagery{% endblocktrans %}</h1>
         <p>{% blocktrans %}Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. {% endblocktrans %}</p>
       </div>
       <div class="col-md-3">
-        <h3>Aerial images</h3>
+        <h3>{% blocktrans %}Aerial images{% endblocktrans %}</h3>
         <p>{% blocktrans %}Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.{% endblocktrans %}</p>
       </div>
       <div class="col-md-3">
-        <h3>Satellite imagery</h3>
+        <h3>{% blocktrans %}Satellite imagery{% endblocktrans %}</h3>
         <p>{% blocktrans %}Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.{% endblocktrans %}</p>
       </div>
       <div class="col-md-3">
-        <h3>DSM/DTM</h3>
+        <h3>{% blocktrans %}DSM/DTM{% endblocktrans %}</h3>
         <p>{% blocktrans %}Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.{% endblocktrans %}</p>
       </div>
     </div>
@@ -68,7 +68,7 @@
 <section id="showcase">
 	<div class="container">
 		<div class="row">
-			<h2>Featured Datasets</h2>
+			<h2>{% blocktrans %}Featured Datasets{% endblocktrans %}</h2>
 		    {% verbatim %}
 		    <div ng-app="featured">
 		      <div ng-repeat="item in featured | limitTo:4">
