Fix GeoServer and 'Explore all datasets' links

--- a/haitidata/templates/site_index.html
+++ b/haitidata/templates/site_index.html
@@ -80,7 +80,7 @@
 		    </div>
 		    {% endverbatim %}
 		</div>
-		<p><a href="#">Explore all datasets</a></p>
+		<p><a href="/search/">Explore all datasets</a></p>
 	</div>
 </section>
 {% endblock %}
