--- a/haitidata/templates/site_base.html
+++ b/haitidata/templates/site_base.html
@@ -101,7 +101,7 @@
               <li><a href="{% url "messages_inbox" %}">{% trans "Inbox" %}</a></li>
               <li role="separator" class="divider"></li>
               <li><a href="{% url "admin:index" %}">Admin</a></li>
-              <li><a href="{{ GEOSERVER_BASE_URL }}">GeoServer</a></li>
+              <li><a href="{{ GEOSERVER_BASE_URL }}" target="_blank">GeoServer</a></li>
               <li role="separator" class="divider"></li>
               <li><a href="{% url "help" %}">{% trans "Help" %}</li>
               <li role="separator" class="divider"></li>
