--- a/haitidata/templates/search/search.html
+++ b/haitidata/templates/search/search.html
@@ -3,14 +3,15 @@
 {% load staticfiles %}
 {% load url from future %}
 
-{% block title %} {% trans "Search" %} - {{ block.super }} {% endblock %}
+{% block title %}{{ block.super }} {% trans "Search" %}{% endblock %}
+
+{% block page-title %}
+  {% trans "Search" %} <span ng-if="text_query != ''"></span> <span ng-bind="text_query"></span>
+{% endblock %}
 
 {% block body_class %}search{% endblock %}
 
 {% block body_outer %}
-  <div class="page-header">
-    <h2>{% trans "Search" %} <span ng-if="text_query != ''">:</span> <span ng-bind="text_query"></span></h2>
-  </div>
   {% with include_type_filter='true' %}
   {% with header='Type' %}
   {% with filter='type__in' %}
