--- a/haitidata/templates/charts_app/chart_base.html
+++ b/haitidata/templates/charts_app/chart_base.html
@@ -4,9 +4,9 @@
 
 {% block title %} {{ block.super }} {% endblock %}
 
-{% block body_class %}layers{% endblock %}
+{% block body_class %}Charts{% endblock %}
 
 {% block body_outer %}
-  {% block body %}{% endblock body %}
-  {% block sidebar %}{% endblock sidebar %}
+{% block body %}{% endblock body %}
+{% block sidebar %}{% endblock sidebar %}
 {% endblock body_outer %}
