--- a/charts-prj/templates/_actions.html
+++ b/charts-prj/templates/_actions.html
@@ -7,6 +7,12 @@
   {% if resource.is_mosaic %}
   <li><a href="#granules" data-toggle="tab"><i class="fa fa-bars"></i>{% trans "Granules" %}</a></li>
   {% endif %}
+  {% if resource.service_type == 'WFS' %}
+  <li><a href="#charts" data-toggle="tab"><i class="fa fa-charts"></i>{% trans "Charts" %}</a></li>
+  {% endif %}
+  {% if SOCIAL_BUTTONS %}
+  <li><a href="#share" data-toggle="tab"><i class="fa fa-share"></i>{% trans "Share" %}</a></li>
+  {% endif %}
   <li><a href="#rate" data-toggle="tab"><i class="fa fa-star"></i>{% trans "Ratings" %}</a></li>
   <li><a href="#comments" data-toggle="tab"><i class="fa fa-comment-o"></i> {% trans "Comments" %}</a></li>
   {% if GEOGIG_ENABLED and resource.link_set.geogig %}
