--- a/django_project/core/templates/site_base.html
+++ b/django_project/core/templates/site_base.html
@@ -14,7 +14,6 @@
     <link href="{{ STATIC_URL }}geonode/css/ext-compatibility.css?v={{ VERSION }}" rel="stylesheet" />
     <style type="text/css">[ng\:cloak],[ng-cloak],[data-ng-cloak],[x-ng-cloak],.ng-cloak,.x-ng-cloak,.ng-hide:not(.ng-hide-animate){display:none !important;}</style>
     <link href="{{ STATIC_URL }}css/haitidata.css" rel="stylesheet"/>
-    <link href="{{ STATIC_URL }}css/custom_haitidata.css" rel="stylesheet"/>
     {% block extra_head %}
     {% endblock %}
 {% endblock %}
@@ -49,79 +48,79 @@
           </ul>
         </li>
         <li id="nav_maps">
-          {% if user.is_authenticated %}
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Maps" %}<i class="fa fa-angle-down fa-lg"></i></a>
-          <ul class="dropdown-menu">
-            <li><a href="{% url "maps_browse" %}">{% trans "Explore Maps" %}</a></li>
-            <li> <a href="{% url "new_map" %}">{% trans "Create Map" %}</a></li>
-          </ul>
-          {% else %}
-          <a href="{% url "maps_browse" %}">{% trans "Maps" %}</a>
-          {% endif %}
-        </li>
-        <li>
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "About" %}<i class="fa fa-angle-down fa-lg"></i></a>
-          <ul class="dropdown-menu">
-            <li><a href="{% url "profile_browse" %}">{% trans "People" %}</a></li>
-            <li><a href="{% url "group_list" %}">{% trans "Groups" %}</a></li>
-            {% if perms.announcements.can_manage %}
-            <li><a href="{% url "announcements_list" %}">{% trans "Announcements" %}</a></li>
+            {% if user.is_authenticated %}
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Maps" %}<i class="fa fa-angle-down fa-lg"></i></a>
+            <ul class="dropdown-menu">
+              <li><a href="{% url "maps_browse" %}">{% trans "Explore Maps" %}</a></li>
+              <li> <a href="{% url "new_map" %}">{% trans "Create Map" %}</a></li>
+            </ul>
+            {% else %}
+            <a href="{% url "maps_browse" %}">{% trans "Maps" %}</a>
             {% endif %}
-            {% if user.is_superuser %}
-            <li role="separator" class="divider"></li>
-            <li><a href="/admin/people/profile/add/">{% trans "Add User" %}</a></li>
-            <li><a href="{% url "account_invite_user" %}">{% trans "Invite User" %}</a></li>
-            <li><a href="{% url "group_create" %}">{% trans "Create Group" %}</a></li>
-            {% endif %}
-          </ul>
-        </li>
-        {% block extra_tab %}
-        {% endblock %}
-        {% endblock %}
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li>
-          <div class="search">
-            <form id="search" action="{% url "search" %}" >
-              <span class="fa fa-search"></span>
-              {% if HAYSTACK_SEARCH %}
-              <input id="search_input" type="text" placeholder='{% trans "Search" %}' name="q">
-              {% else %}
-              <input id="search_input" type="text" placeholder='{% trans "Search" %}' name="title__icontains">
+          </li>
+          <li>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "About" %}<i class="fa fa-angle-down fa-lg"></i></a>
+            <ul class="dropdown-menu">
+              <li><a href="{% url "profile_browse" %}">{% trans "People" %}</a></li>
+              <li><a href="{% url "group_list" %}">{% trans "Groups" %}</a></li>
+              {% if perms.announcements.can_manage %}
+              <li><a href="{% url "announcements_list" %}">{% trans "Announcements" %}</a></li>
               {% endif %}
-            </form>
-          </div>
-        </li>
-        {% if not user.is_authenticated and REGISTRATION_OPEN %}
-        <li><a href="{% url "account_signup" %}">{% trans "Register" %}</a></li>
-        {% endif %}
-        {% if user.is_authenticated %}
-        <li><a href="#" class="dropdown-toggle avatar" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% avatar user 42 %} {{ user.username }}<i class="fa fa-angle-down fa-lg"></i></a>
-          <ul class="dropdown-menu">
-            <li><a href="{{ user.get_absolute_url }}">{% trans "Profile" %}</a></li>
-            <li><a href="{% url "recent-activity" %}">{% trans "Recent Activity" %}</a></li>
-            <li><a href="{% url "messages_inbox" %}">{% trans "Inbox" %}</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="{% url "admin:index" %}">Admin</a></li>
-            <li><a href="{{ GEOSERVER_BASE_URL }}">GeoServer</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="{% url "help" %}">{% trans "Help" %}</li>
-            <li role="separator" class="divider"></li>
-            <li><a href="/account/logout/">Logout</a></li>
-          </ul>
-        </li>
-        {% else %}
-        <li><a href="#" data-toggle="modal" data-target="#SigninModal" role="button" >{% trans "Sign in" %} </a></li>
-        {% endif %}
-      </ul>
-    </div> <!--/.nav-collapse -->
-  </div>
-</nav>
-{% endblock header %}
-<!-- End of Navbar -->
+              {% if user.is_superuser %}
+              <li role="separator" class="divider"></li>
+              <li><a href="/admin/people/profile/add/">{% trans "Add User" %}</a></li>
+              <li><a href="{% url "account_invite_user" %}">{% trans "Invite User" %}</a></li>
+              <li><a href="{% url "group_create" %}">{% trans "Create Group" %}</a></li>
+              {% endif %}
+            </ul>
+          </li>
+          {% block extra_tab %}
+          {% endblock %}
+        {% endblock %}
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <div class="search">
+              <form id="search" action="{% url "search" %}" >
+                <span class="fa fa-search"></span>
+                {% if HAYSTACK_SEARCH %}
+                <input id="search_input" type="text" placeholder='{% trans "Search" %}' name="q">
+                {% else %}
+                <input id="search_input" type="text" placeholder='{% trans "Search" %}' name="title__icontains">
+                {% endif %}
+              </form>
+            </div>
+          </li>
+          {% if not user.is_authenticated and REGISTRATION_OPEN %}
+          <li><a href="{% url "account_signup" %}">{% trans "Register" %}</a></li>
+          {% endif %}
+          {% if user.is_authenticated %}
+          <li><a href="#" class="dropdown-toggle avatar" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% avatar user 42 %} {{ user.username }}<i class="fa fa-angle-down fa-lg"></i></a>
+            <ul class="dropdown-menu">
+              <li><a href="{{ user.get_absolute_url }}">{% trans "Profile" %}</a></li>
+              <li><a href="{% url "recent-activity" %}">{% trans "Recent Activity" %}</a></li>
+              <li><a href="{% url "messages_inbox" %}">{% trans "Inbox" %}</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="{% url "admin:index" %}">Admin</a></li>
+              <li><a href="{{ GEOSERVER_BASE_URL }}" target="_blank">GeoServer</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="{% url "help" %}">{% trans "Help" %}</li>
+              <li role="separator" class="divider"></li>
+              <li><a href="/account/logout/">{% trans "Logout" %}</a></li>
+            </ul>
+          </li>
+          {% else %}
+          <li><a href="#" data-toggle="modal" data-target="#SigninModal" role="button" >{% trans "Sign in" %} </a></li>
+          {% endif %}
+        </ul>
+      </div> <!--/.nav-collapse -->
+    </div>
+  </nav>
+  {% endblock header %}
+  <!-- End of Navbar -->
 
 
-{% block middle %}
+  {% block middle %}
   <header>
   	<div class="container">
   		<h3>{% block page-title %}{% endblock %}</h3>
@@ -134,12 +133,12 @@
   	{% include "_messages.html" %}
   	{% block body_outer %}
   	<div class="row">
-  		<div class="col-md-12">
-  		    {% block body %}{% endblock %}
-      </div>
-      <div class="col-md-4">
-        {% block sidebar %}{% endblock %}
-      </div>
+  		<div class="col-md-8">
+  		{% block body %}{% endblock %}
+          </div>
+          <div class="col-md-4">
+          {% block sidebar %}{% endblock %}
+          </div>
   	</div>
   	{% endblock %}
   </div>
