fix metadata detail url

--- a/django_project/core/templates/layers/layer_detail.html
+++ b/django_project/core/templates/layers/layer_detail.html
@@ -343,7 +343,7 @@
     {% endif %}
 
     <li class="list-group-item">
-      <a href="{% url "layer_metadata_detail" resource.typename %}">
+      <a href="{% url "layer_metadata_detail" resource.alternate %}">
         <button class="btn btn-primary btn-md btn-block">{% trans "Metadata Detail" %}</button>
       </a>
     </li>
