Add clip and ship

--- a/haitidata/templates/layers/layer_detail.html
+++ b/haitidata/templates/layers/layer_detail.html
@@ -274,6 +274,9 @@
   <div class="col-md-4">
 
     <ul class="list-group">
+      <li class="list-group-item">
+          <button class="btn btn-primary btn-md btn-block" data-toggle="modal" data-target="#download_clip_page" id="download-clip">{% trans "Download Clip" %}</button>
+      </li>
       {% if resource.storeType != "remoteStore" %}
         <li class="list-group-item">
         {% if links or links_download %}
@@ -338,12 +341,6 @@
     {% if GEOSERVER_BASE_URL %}
       {% get_obj_perms request.user for resource.layer as "layer_perms" %}
     {% endif %}
-
-    <li class="list-group-item">
-      <a href="{% url "layer_metadata_detail" resource.typename %}">
-        <button class="btn btn-primary btn-md btn-block">{% trans "Metadata Detail" %}</button>
-      </a>
-    </li>
 
     {% if "change_resourcebase_metadata" in perms_list or "change_resourcebase" in perms_list or "delete_resourcebase" in perms_list or "change_layer_style" in layer_perms %}
     <li class="list-group-item">
@@ -748,7 +745,12 @@ function updateLinkAndTitle(){
     {% endif %}
     {% include 'rating.html' %}
     {% include 'request_download.html' %}
+    {% include 'layers/download_clip.html' %}
     <script type="text/javascript">
+
+        var layerMap = layerMap || null;
+        var editableLayers = editableLayers || null;
+
        $("#comment_submit_btn").click(function(event) {
             $.ajax({
               type: "POST",
