--- a/haitidata/templates/layers/layer_detail.html
+++ b/haitidata/templates/layers/layer_detail.html
@@ -274,9 +274,11 @@
   <div class="col-md-4">
 
     <ul class="list-group">
+      {% if resource.service_type = "WCS" %}
       <li class="list-group-item">
           <button class="btn btn-primary btn-md btn-block" data-toggle="modal" data-target="#download_clip_page" id="download-clip">{% trans "Download Clip" %}</button>
       </li>
+      {% endif %}
       {% if resource.storeType != "remoteStore" %}
         <li class="list-group-item">
         {% if links or links_download %}
