--- a/haitidata/static/less/haitidata.less
+++ b/haitidata/static/less/haitidata.less
@@ -929,23 +929,18 @@ nav.filter {
 		padding: 10px 0;
 		text-transform: uppercase;
 		border-radius: 3px;
-
 		a {
 			color: white;
 		}
-
 		a.toggle {
 			text-decoration: none;
 		}
-
 		i {
 			margin-left: 8px;
 		}
 	}
-
 	.active {
 		color: @brand-info;
-
 		.badge {
 			background: @brand-info;
 		}
@@ -958,6 +953,7 @@ nav.filter {
 	li a {
 		border-bottom: 1px solid @gray-lighter;
 		cursor: pointer;
+		font-size: 14px;
 		padding: 5px 10px;
 	}
 }
