--- a/haitidata/static/less/haitidata.less
+++ b/haitidata/static/less/haitidata.less
@@ -522,10 +522,15 @@ footer {
 }
 /* Items
 ----------------------- */
-.actions,
-.filter {
+.actions, .filter {
 	.fa {
 		margin-right: 8px;
+	}
+
+	.input-group {
+		.fa {
+			margin-right: 0;
+		}
 	}
 }
 
@@ -1197,6 +1202,7 @@ nav.filter {
 }
 
 #composerCart {
+	font-size: 14px;
 	.list-group i {
 		margin-right: 0;
 	}
