--- a/django_project/core/templates/site_base.html
+++ b/django_project/core/templates/site_base.html
@@ -74,6 +74,14 @@
               {% endif %}
             </ul>
           </li>
+         <li>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Clip" %}<i class="fa fa-angle-down fa-lg"></i></a>
+              <ul class="dropdown-menu">
+                  {% for geotiff in CLIPPED_LAYERNAME %}
+                        <li><a href="/clip/{{ geotiff }}">{{ geotiff }}</a></li>
+                  {% endfor %}
+              </ul>
+          </li>
           {% block extra_tab %}
           {% endblock %}
         {% endblock %}
