--- a/haitidata/static/less/haitidata.less
+++ b/haitidata/static/less/haitidata.less
@@ -651,9 +651,17 @@ footer {
 .item-thumb {
 	padding-left: 0;
 	padding-right: 0;
-
 	img {
 		width: 100%;
+	}
+	.cnigs-logo {
+		border-radius: 50%;
+		position: absolute;
+		top: 5px;
+		right: 5px;
+		height: 42px;
+		width: 42px;
+		z-index: 99;
 	}
 }
 
@@ -671,10 +679,13 @@ footer {
 		font-size: 0.875em;
 	}
 	.item-meta {
+		font-size: 0.75em;
 		margin-top: 1em;
 		.item-category {
-			font-size: 0.75em;
 			text-transform: uppercase;
+		}
+		a {
+			color: @gray-darker;
 		}
 	}
 	.btn-xs {
