--- a/haitidata/templates/base/_resourcebase_snippet.html
+++ b/haitidata/templates/base/_resourcebase_snippet.html
@@ -9,12 +9,18 @@
       <div class="col-xs-12 profile-avatar">
         <div class="col-xs-4 item-thumb">
           <a href="{{ item.detail_url }}"><img ng-src="{{ item.thumbnail_url }}" /></a>
+          <span ng-if="item.owner__username == 'cnigs'" ng-cloak>
+            <img class="cnigs-logo" src="/uploaded/avatars/cnigs/resized/42/cnigs-logo.jpg" />
+          </span>
         </div>
         <div class="col-xs-8 item-details">
           {% endverbatim %}
           <button class="btn btn-default btn-xs pull-right" ng-if="cart" ng-click="cart.toggleItem(item)"><i ng-class="cart.getFaClass(item.id)" class="fa fa-lg"></i></button>
           {% verbatim %}
-          <p class="item-meta"><span class="item-category">{{ item.category__gn_description }}</span></p>
+          <p class="item-meta">
+            <span ng-if="item.owner__username == 'cnigs'" ng-cloak><a href="/layers/?owner__username__in=cnigs">CNIGS Official Data</a> | </span>
+            <span class="item-category">{{ item.category__gn_description }}</span>
+          </p>
           <h4><a href="{{ item.detail_url }}">{{ item.title | limitTo: 48 }}{{ item.title.length  > 48 ? '...' : ''}}</a></h4>
           <p class="abstract">{{ item.abstract | limitTo: 300 }}{{ item.abstract.length  > 300 ? '...' : ''}}</p>
           <div class="row">
