--- a/haitidata/templates/site_base.html
+++ b/haitidata/templates/site_base.html
@@ -58,6 +58,13 @@
             <a href="{% url "maps_browse" %}">{% trans "Maps" %}</a>
             {% endif %}
           </li>
+          <li id="nav_imagery">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Imagery" %}<i class="fa fa-angle-down fa-lg"></i></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">{% trans "Orthophotos" %}</a></li>
+                <li> <a href="#">{% trans "DSM" %}</a></li>
+              </ul>
+            </li>
           <li>
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "About" %}<i class="fa fa-angle-down fa-lg"></i></a>
             <ul class="dropdown-menu">
