--- a/django_project/core/templates/layers/download_clip.html
+++ b/django_project/core/templates/layers/download_clip.html
@@ -132,7 +132,8 @@
     function download_clip_wcs(clipUrl, geometry_url) {
         var layer_name = clipUrl.replace('/clip/', '');
         var ship_url = '{{ GEOSERVER_BASE_URL }}/wcs?filename={{ resource.name }}.tif&request=getcoverage&version=1.0.0&service=wcs&coverage=' + layer_name + '&CRS=EPSG:4326&format=geotiff&resx=0.5&resy=0.5' + geometry_url;
-        window.open(ship_url);
+        console.log(ship_url);
+        // window.open(ship_url);
     }
 
     function download_clip_layer(clipUrl, geometry_url) {
