Polygon clipping in mosaic

--- a/django_project/core/templates/layers/download_clip.html
+++ b/django_project/core/templates/layers/download_clip.html
@@ -138,6 +138,7 @@
 
     function download_clip_layer(clipUrl, geometry_url) {
         var ship_url = clipUrl + '/clip-layer?' + geometry_url;
+        console.log(ship_url);
         $.ajax({
             url: ship_url,
             type: 'GET',
@@ -145,9 +146,11 @@
                 $('#download-clip-button').prop('disabled', false);
                 var clip_filename = result['clip_filename'];
                 location.href = clipUrl + '/' + clip_filename + '/download-clip';
+                console.log(clipUrl + '/' + clip_filename + '/download-clip');
                 editableLayers.clearLayers();
             },
             error: function (result) {
+                console.log(clipUrl + '/' + clip_filename + '/download-clip');
                 download_clip_wcs(clipUrl, geometry_url);
                 $('#download-clip-button').prop('disabled', false);
                 var error_message = result['responseJSON']['error'];
@@ -171,7 +174,9 @@
         if (editableLayers) {
             var geojson = editableLayers.toGeoJSON();
             if (geojson.features.length > 0) {
+                var bboxEditableLayers = editableLayers.getBounds().toBBoxString();
                 var geometry_url = '&GEOJSON=' + JSON.stringify(geojson);
+                geometry_url += '&BBOX=' + bboxEditableLayers.toString();
                 download_clip_layer(clipUrl, geometry_url);
                 return;
             } else {
