--- a/haitidata/templates/layers/layer_detail.html
+++ b/haitidata/templates/layers/layer_detail.html
@@ -644,7 +644,7 @@
 
 
       function chart_title(){
-          if (agg == dict_title_agg[2]){
+          if (agg == "2"){
               suggestedTitle = dict_title_agg[agg] + " of elements for "  + category;
           } else {
               var title = dict_title_agg[agg]
