--- a/haitidata/templates/site_base.html
+++ b/haitidata/templates/site_base.html
@@ -70,7 +70,7 @@
             <ul class="dropdown-menu">
               <li><a href="{% url "profile_browse" %}">{% trans "People" %}</a></li>
               <li><a href="{% url "group_list" %}">{% trans "Groups" %}</a></li>
-              <li><a href="{% url "tutorials" %}">{% trans "Tutorials" %}</a></li>
+              <li><a href="/tutorials">{% trans "Tutorials" %}</a></li>
               {% if perms.announcements.can_manage %}
               <li><a href="{% url "announcements_list" %}">{% trans "Announcements" %}</a></li>
               {% endif %}
