--- a/django_project/core/templates/site_base.html
+++ b/django_project/core/templates/site_base.html
@@ -58,6 +58,13 @@
             <a href="{% url "maps_browse" %}">{% trans "Maps" %}</a>
             {% endif %}
           </li>
+         <li>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Imagery" %}<i class="fa fa-angle-down fa-lg"></i></a>
+              <ul class="dropdown-menu">
+                <li><a href="/clip/Haiti25cm-PaP-extract">Orthophotos</a></li>
+                <li><a href="/clip/lidar">DSM</a></li>
+              </ul>
+          </li>
           <li>
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "About" %}<i class="fa fa-angle-down fa-lg"></i></a>
             <ul class="dropdown-menu">
@@ -73,13 +80,6 @@
               <li><a href="{% url "group_create" %}">{% trans "Create Group" %}</a></li>
               {% endif %}
             </ul>
-          </li>
-         <li>
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Clip" %}<i class="fa fa-angle-down fa-lg"></i></a>
-              <ul class="dropdown-menu">
-                <li><a href="/clip/ortho_images">Ortho Images</a></li>
-                <li><a href="/clip/haiti_dem">DEM</a></li>
-              </ul>
           </li>
           {% block extra_tab %}
           {% endblock %}
