Add style to Chart list

--- a/haitidata/static/less/haitidata.less
+++ b/haitidata/static/less/haitidata.less
@@ -434,23 +434,23 @@ footer {
 			margin-bottom: 1em;
 		}
 		.keywords {
-			border-radius: .4em;
+			border-radius: 0.6em;
 			color: white;
 			&:hover {
-				background: darken(@brand-primary, 10%);
+				background: @brand-primary;
 				color: white;
 				text-decoration: none;
-				transition: 0.5s all;
-				-webkit-transition: 0.5s all;
-				-moz-transition: 0.5s all;
-				-o-transition: 0.5s all;
-				-ms-transition: 0.5s all;
+				        transition: 0.5s all;
+				-webkit-transition: 1s all;
+				   -moz-transition: 1s all;
+				     -o-transition: 1s all;
+				    -ms-transition: 1s all;
 			}
 		}
 		.keywords a {
 			color: white;
 			&:hover {
-				background: darken(@brand-primary, 10%);
+				background: @brand-primary;
 				color: white;
 				text-decoration: none;
 			}
