Fix Filters link color

--- a/haitidata/static/less/haitidata.less
+++ b/haitidata/static/less/haitidata.less
@@ -980,10 +980,13 @@ nav.filter {
 			margin-left: 8px;
 		}
 	}
+	li a {
+		color: @gray;
+	}
 	.active {
-		color: @brand-info;
+		color: @brand-primary;
 		.badge {
-			background: @brand-info;
+			background: @brand-primary;
 		}
 	}
 
