--- a/haitidata/static/less/haitidata.less
+++ b/haitidata/static/less/haitidata.less
@@ -962,6 +962,10 @@ body.importer {
 }
 /* ------ Search
 ------------------------------ */
+.btn-tools {
+	font-size: 0.75em;
+}
+
 nav.filter {
 	h4 {
 		background: @gray-dark;
