--- a/haitidata/templates/site_base.html
+++ b/haitidata/templates/site_base.html
@@ -61,7 +61,7 @@
           <li id="nav_imagery">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Imagery" %}<i class="fa fa-angle-down fa-lg"></i></a>
               <ul class="dropdown-menu">
-                <li><a href="/clip/Haiti25cm-PaP-extract">{% trans "Orthophotos" %}</a></li>
+                <li><a href="/clip/ortho_images">{% trans "Orthophotos" %}</a></li>
                 <li> <a href="/clip/lidar">{% trans "DSM" %}</a></li>
               </ul>
             </li>
