--- a/haitidata/templates/base/_resourcebase_snippet.html
+++ b/haitidata/templates/base/_resourcebase_snippet.html
@@ -2,7 +2,7 @@
 {% verbatim %}
 <div class="row">
   <div ng-if="results.length == 0" ng-cloak>
-    <div><h3>{% trans "No content found." %}</h3></div>
+    <div><h3>Aucun contenu trouvé.</h3></div>
   </div>
   <article ng-repeat="item in results" resource_id="{{ item.id }}" ng-cloak class="ng-cloak">
     <div class="col-xs-12 item-container">
