--- a/django_project/core/templates/site_base.html
+++ b/django_project/core/templates/site_base.html
@@ -61,7 +61,7 @@
          <li>
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Imagery" %}<i class="fa fa-angle-down fa-lg"></i></a>
               <ul class="dropdown-menu">
-                <li><a href="/clip/Haiti25cm-PaP-extract">Orthophotos</a></li>
+                <li><a href="/clip/ortho_images">Orthophotos</a></li>
                 <li><a href="/clip/lidar">DSM</a></li>
               </ul>
           </li>
