--- a/haitidata/templates/site_base.html
+++ b/haitidata/templates/site_base.html
@@ -11,6 +11,23 @@
     {% else %}
     <link href="{{ STATIC_URL }}lib/css/assets.min.css?v={{ VERSION }}" rel="stylesheet"/>
     {% endif %}
+    <link rel="shortcut icon" href="/favicon.ico">
+  	<link rel="icon" sizes="16x16 32x32 64x64" href="/favicon.ico">
+  	<link rel="icon" type="image/png" sizes="196x196" href="/static/img/favicon-192.png">
+  	<link rel="icon" type="image/png" sizes="160x160" href="/static/img/favicon-160.png">
+  	<link rel="icon" type="image/png" sizes="96x96" href="/static/img/favicon-96.png">
+  	<link rel="icon" type="image/png" sizes="64x64" href="/static/img/favicon-64.png">
+  	<link rel="icon" type="image/png" sizes="32x32" href="/static/img/favicon-32.png">
+  	<link rel="icon" type="image/png" sizes="16x16" href="/static/img/favicon-16.png">
+  	<link rel="apple-touch-icon" href="/static/img/favicon-57.png">
+  	<link rel="apple-touch-icon" sizes="114x114" href="/static/img/favicon-114.png">
+  	<link rel="apple-touch-icon" sizes="72x72" href="/static/img/favicon-72.png">
+  	<link rel="apple-touch-icon" sizes="144x144" href="/static/img/favicon-144.png">
+  	<link rel="apple-touch-icon" sizes="60x60" href="/static/img/favicon-60.png">
+  	<link rel="apple-touch-icon" sizes="120x120" href="/static/img/favicon-120.png">
+  	<link rel="apple-touch-icon" sizes="76x76" href="/static/img/favicon-76.png">
+  	<link rel="apple-touch-icon" sizes="152x152" href="/static/img/favicon-152.png">
+  	<link rel="apple-touch-icon" sizes="180x180" href="/static/img/favicon-180.png">
     <link href="{{ STATIC_URL }}geonode/css/ext-compatibility.css?v={{ VERSION }}" rel="stylesheet" />
     <style type="text/css">[ng\:cloak],[ng-cloak],[data-ng-cloak],[x-ng-cloak],.ng-cloak,.x-ng-cloak,.ng-hide:not(.ng-hide-animate){display:none !important;}</style>
     <link href="{{ STATIC_URL }}css/haitidata.css" rel="stylesheet"/>
