--- a/haitidata/templates/clip-and-ship/clip-page.html
+++ b/haitidata/templates/clip-and-ship/clip-page.html
@@ -20,6 +20,18 @@
     <div id="download-clip-map"></div>
 
     <button type="button" class="btn btn-primary btn-md btn-block" data-toggle="modal" data-target="#download_clip_page" id="download-clip-button">Download Clip</button>
+    {% if geotiffname == 'ortho_images' %}
+    <div class="row">
+      <div class="col-md-8">
+        <article id="info">
+          <h3>Ortho Photos</h3>
+          <p>Les <strong>orthophotographies</strong> ou <strong>orthoimages</strong> sont des images aériennes ou satellitales de la surface terrestre rectifiées géométriquement et égalisées radiométriquement. Ces images se présentant sous forme de dalles couvrant une zone de la Terre peuvent être géoréférencées dans n'importe quel système de coordonnées. Elles servent de fonds cartographiques dans les Systèmes d'information géographique.</p>
+          <p>Pour mieux comprendre comment sélectionner la zone d’intérêt, voir le <a href="/tutorials/">tutoriel</a>.</p>
+          <p>La taille maximale accepté est de 40 megabytes.</p>
+        </article>
+      </div>
+    </div>
+    {% endif %}
 
     <style>
         #download-clip-map {
