Add translations to js and clip page

--- a/haitidata/templates/clip-and-ship/download-clip.html
+++ b/haitidata/templates/clip-and-ship/download-clip.html
@@ -143,10 +143,10 @@
                 download_clip_layer(clipUrl, geometry_url);
                 return;
             } else {
-                alert('No polygon in map, this will clip from map extent instead.')
+                alert('Aucune zone a été sélectionné, le site telechargera toute la couche. No zone has been selected, the website will download the whole layer.')
             }
         } else {
-            alert('No polygon in map, this will clip from map extent instead.')
+            alert('Aucune zone a été sélectionné, le site telechargera toute la couche. No zone has been selected, the website will download the whole layer.')
         }
 
 
