--- a/haitidata/templates/clip-and-ship/clip-page.html
+++ b/haitidata/templates/clip-and-ship/clip-page.html
@@ -19,7 +19,7 @@
     <div id="download-clip-error-message" class="label label-danger" style="margin-bottom: 50px; display: none">Error message</div>
     <div id="download-clip-map"></div>
 
-    <button type="button" class="btn btn-primary btn-md btn-block" data-toggle="modal" data-target="#download_clip_page" id="download-clip-button">Download Clip</button>
+    <button type="button" class="btn btn-primary btn-md btn-block" data-toggle="modal" data-target="#download_clip_page" id="download-clip-button">{% trans "Download Clip" %}</button>
     {% if geotiffname == 'ortho_images' %}
     <div class="row">
       <div class="col-md-8">
